[package]
name = "uhd_rs"
version = "0.1.0"
authors = ["John Stanford on deathStar <johnwstanford@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
colored = "1.8.0"
libc = "0.2.0"

serde = { version = "1.0.60", features = ["derive"] }
serde_derive = "1.0.115"
serde_json = "1.0.39"

